# zux

./: CMakeLists.txt  ps2-cross.txt
kern/: .clang-format  CMakeLists.txt  kern.ld
kern/include/: dev9.h  intc.h  printf.h  sio.h  timer.h  types.h  util.h
kern/src/: cop0.h  crt0.s  dev9.c  exception.s  intc.c  kmain.c  kputchar.c  printf.c  sio.c  timer.c  util.c
loader/: CMakeLists.txt
loader/include/: elf32.h  elf_common.h
loader/src/: loader.c
